@@ -24,19 +24,9 @@ import org.neo4j.cypher.internal.executionplan.{ExecutionPlanInProgress, PlanBui
 import org.neo4j.cypher.internal.commands.expressions.{Identifier, CachedExpression, Expression}
 import org.neo4j.cypher.CypherTypeException
 
-class SortBuilder extends PlanBuilder {
+class SortBuilder extends PlanBuilder with SortingPreparations {
   def apply(plan: ExecutionPlanInProgress) = {
-    val sortExpressionsToExtract: Seq[(String, Expression)] = plan.query.sort.flatMap(x => x.token.expression match {
-      case _: CachedExpression => None
-      case _: Identifier       => None
-      case e                   => Some("  INTERNAL_SORT" + e.## -> e)
-    })
-
-    val newPlan = try {
-      ExtractBuilder.extractIfNecessary(plan, sortExpressionsToExtract.toMap)
-    } catch {
-      case e: CypherTypeException => throw new CypherTypeException(e.getMessage + " - maybe aggregation removed it?")
-    }
+    val newPlan = extractBeforeSort(plan)
 
     val q = newPlan.query
     val sortItems = q.sort.map(_.token)
@@ -50,4 +40,20 @@ class SortBuilder extends PlanBuilder {
   def canWorkWith(plan: ExecutionPlanInProgress) = plan.query.extracted && plan.query.sort.filter(_.unsolved).nonEmpty
 
   def priority: Int = PlanBuilder.Sort
+}
+
+trait SortingPreparations {
+  def extractBeforeSort(plan: ExecutionPlanInProgress): ExecutionPlanInProgress = {
+    val sortExpressionsToExtract: Seq[(String, Expression)] = plan.query.sort.flatMap(x => x.token.expression match {
+      case _: CachedExpression => None
+      case _: Identifier       => None
+      case e                   => Some("  INTERNAL_SORT" + e.## -> e)
+    })
+
+    try {
+      ExtractBuilder.extractIfNecessary(plan, sortExpressionsToExtract.toMap)
+    } catch {
+      case e: CypherTypeException => throw new CypherTypeException(e.getMessage + " - maybe aggregation removed it?")
+    }
+  }
 }
