@@ -3,6 +3,7 @@
 o The traversal pattern matcher now supports variable length relationship patterns
 o Fixes #946 - HAS(...) fails with ThisShouldNotHappenException for some patterns
 o Major refactoring to make certain Cypher is more lazy
+o When asking for the top x rows by some value, Cypher will now only keep a list the size of x
 
 1.9.M01 (2012-10-23)
 --------------------
